--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,5 @@
-spring.application.name=CustomerMS
-server.port=8200
+spring.application.name=Eureka
+server.port=2222
+eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=false
 eureka.client.service-url.defaultZone=http://localhost:2222/eureka
-hystrix.command.default.circuitBreaker.requestVolumeThreshold=10
-hystrix.command.default.metrics.rollingStats.timeInMilliseconds=10000
-hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
-hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=10000
